Updated the UI in Index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Fix Alerts
     <!--Sets up stylesheet and script file linking. Adds favicon and site title as well-->
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="Images/asl_logo.ico" />
-    <title>SignVerse</title>
+    <title>SignStream</title>
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:100,300,400,500"
       rel="stylesheet"
@@ -26,8 +26,8 @@ Fix Alerts
     <!--Welcome Screen-->
     <div id="welcomeContainer" class="animated">
       <div id="welcomeScreen">
-        <h1>Welcome to SignVerse A sign language translator</h1>
-        <h3 class="animated fadeInUp delay-2s">By Banny Ercy Ndikuriyo🔥</h3>
+        <h1>Welcome to SignStream A sign language translator</h1>
+        <h3 class="animated fadeInUp delay-2s">By SignStream Inc.🔥</h3>
       </div>
       <button id="proceedButton">Proceed😊</button>
     </div>
